--- a/styles.css
+++ b/styles.css
@@ -10,15 +10,25 @@ body {
   margin: 0;
 }
 
-header {
+h1#header {
+  margin: 0;
+  padding-top: 5px;
+  padding-bottom: 10px;
   background: #203260;
   color: white;
   text-align: center;
+  font-weight: 300;
+  font-size: 30px;
 }
 
-.header-decoration {
+h1#header a {
   text-decoration: none;
   color: white;
+}
+
+h1#header a:hover {
+  text-decoration: underline;
+  color: rgb(65, 207, 253);
 }
 
 main {
@@ -27,7 +37,7 @@ main {
   padding-bottom: 10px;
 }
 
-div {
+div#main {
   background-color: rgb(242, 245, 250);
   width: 800px;
   margin-left: auto;
@@ -58,9 +68,12 @@ a.ex:active {
   color: darkmagenta;
 }
 
-
-footer {
+p#footer {
+  margin: 0;
+  padding-top: 10px;
+  padding-bottom: 10px;
   background: #203260;
   color: white;
   text-align: center;
+  font-weight: 300;
 }
