--- a/13-HTML&CSS-Intro/styles.css
+++ b/13-HTML&CSS-Intro/styles.css
@@ -39,13 +39,17 @@ main {
 
 div#main {
   background-color: rgb(242, 245, 250);
-  width: 800px;
+  /* width: 800px; */
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
   padding-top: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 20px;
   padding-left: 25px;
   padding-right: 25px;
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 300;
 }
 
 section {
