--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,21 @@ h1#header a:hover {
   color: rgb(65, 207, 253);
 }
 
+nav button {
+  cursor: pointer;
+  padding: 9px;
+  margin-top: 13px;
+  margin-bottom: 23px;
+  font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+nav button:hover {
+  /* text-decoration: underline; */
+  color: darkmagenta;
+}
+
 main {
   flex: 1;
   padding-top: 10px;
@@ -39,27 +54,16 @@ main {
 
 div#main {
   background-color: rgb(242, 245, 250);
-  width: 800px;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
   padding-top: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 20px;
   padding-left: 25px;
   padding-right: 25px;
-}
-
-nav button {
-  cursor: pointer;
-  padding: 9px;
-  margin-top: 13px;
-  margin-bottom: 23px;
-  font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
+  font-style: normal;
   font-size: 16px;
-}
-
-nav button:hover {
-  /* text-decoration: underline; */
-  color: darkmagenta;
+  font-weight: 300;
 }
 
 section {
