--- a/13-HTML&CSS-Intro/styles.css
+++ b/13-HTML&CSS-Intro/styles.css
@@ -39,8 +39,8 @@ main {
 
 div#main {
   background-color: rgb(242, 245, 250);
-  /* width: 800px; */
   width: 80%;
+  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 5px;
