--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,9 @@ main {
 
 div#main {
   background-color: rgb(242, 245, 250);
-  width: 80%;
+  /* width: 80%; */
+  min-width: 100px;
+  max-width: 400px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 5px;
