--- a/17-Media-Queries/styles.css
+++ b/17-Media-Queries/styles.css
@@ -36,13 +36,12 @@ main {
 
 .content {
   flex: 1;
-  padding-left: 25px;
-  padding-right: 25px;
 }
 
 div#main {
   background-color: rgb(242, 245, 250);
   width: 80%;
+  max-width: 800px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 5px;
