--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,10 @@
-html,
 body {
-  height: 100%;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
   font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
   margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 h1#header {
@@ -31,6 +28,31 @@ h1#header a:hover {
   color: rgb(65, 207, 253);
 }
 
+main {
+  flex: 1;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.content {
+  flex: 1;
+}
+
+div#main {
+  background-color: rgb(242, 245, 250);
+  /* width: 80%; */
+  max-width: 420px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 5px;
+  padding-bottom: 20px;
+  padding-left: 25px;
+  padding-right: 25px;
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 300;
+}
+
 nav button {
   cursor: pointer;
   padding: 9px;
@@ -44,28 +66,6 @@ nav button {
 nav button:hover {
   /* text-decoration: underline; */
   color: darkmagenta;
-}
-
-main {
-  flex: 1;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-div#main {
-  background-color: rgb(242, 245, 250);
-  /* width: 80%; */
-  min-width: 100px;
-  max-width: 400px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-top: 5px;
-  padding-bottom: 20px;
-  padding-left: 25px;
-  padding-right: 25px;
-  font-style: normal;
-  font-size: 16px;
-  font-weight: 300;
 }
 
 section {
