--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,8 @@ main {
 
 div#main {
   background-color: rgb(242, 245, 250);
-  /* width: 80%; */
-  max-width: 420px;
+  width: 85%;
+  max-width: 720px;
   margin-left: auto;
   margin-right: auto;
   padding-top: 5px;
@@ -55,11 +55,13 @@ div#main {
 
 nav button {
   cursor: pointer;
-  padding: 9px;
+  border-radius: 3px;
+  border: 1px solid #203260;
+  padding: 3px;
   margin-top: 13px;
   margin-bottom: 23px;
   font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 300;
 }
 
