--- a/13-HTML&CSS-Intro/styles.css
+++ b/13-HTML&CSS-Intro/styles.css
@@ -19,6 +19,8 @@ h1#header {
   text-align: center;
   font-weight: 300;
   font-size: 30px;
+  z-index: 1000;
+  position: relative;
 }
 
 h1#header a {
@@ -80,6 +82,8 @@ p#footer {
   color: white;
   text-align: center;
   font-weight: 300;
+  z-index: 1000;
+  position: relative;
 }
 
 p#footer a {
