--- a/17-Media-Queries/styles.css
+++ b/17-Media-Queries/styles.css
@@ -16,6 +16,8 @@ h1#header {
   text-align: center;
   font-weight: 300;
   font-size: 30px;
+  z-index: 1000;
+  position: relative;
 }
 
 h1#header a {
@@ -81,6 +83,8 @@ p#footer {
   color: white;
   text-align: center;
   font-weight: 300;
+  z-index: 1000;
+  position: relative;
 }
 
 p#footer a {
