--- a/13-HTML&CSS-Intro/styles.css
+++ b/13-HTML&CSS-Intro/styles.css
@@ -11,14 +11,14 @@ body {
 }
 
 h1#header {
-  margin: 0;
-  padding-top: 5px;
-  padding-bottom: 10px;
   background: #203260;
-  color: white;
+  margin: 0;
+  padding: 5px 0 10px;
   text-align: center;
+  font-style: normal;
   font-weight: 300;
   font-size: 30px;
+  color: white;
   z-index: 1000;
   position: relative;
 }
@@ -35,8 +35,23 @@ h1#header a:hover {
 
 main {
   flex: 1;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px 0;
+}
+
+#main-content {
+  background-color: rgb(242, 245, 250);
+  width: 80%;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px 25px 20px 25px;
+  font-style: normal;
+  font-size: 16px;
+  font-weight: 300;
+}
+
+.content {
+  flex: 1;
 }
 
 div#main {
@@ -45,10 +60,7 @@ div#main {
   max-width: 800px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 5px;
-  padding-bottom: 20px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding: 5px 25px 20px 25px;
   font-style: normal;
   font-size: 16px;
   font-weight: 300;
@@ -75,13 +87,14 @@ a.ex:active {
 }
 
 p#footer {
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
   background: #203260;
-  color: white;
+  margin: 0;
+  padding: 10px 0 10px;
   text-align: center;
+  font-style: normal;
   font-weight: 300;
+  font-size: 16px;
+  color: white;
   z-index: 1000;
   position: relative;
 }
