--- a/14-CSS-Selectors/styles.css
+++ b/14-CSS-Selectors/styles.css
@@ -8,14 +8,14 @@ body {
 }
 
 h1#header {
-  margin: 0;
-  padding-top: 5px;
-  padding-bottom: 10px;
   background: #203260;
-  color: white;
+  margin: 0;
+  padding: 5px 0 10px;
   text-align: center;
+  font-style: normal;
   font-weight: 300;
   font-size: 30px;
+  color: white;
   z-index: 1000;
   position: relative;
 }
@@ -32,14 +32,22 @@ h1#header a:hover {
 
 main {
   flex: 1;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px 0;
+}
+
+#main-content {
+  background-color: rgb(242, 245, 250);
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px 25px 20px 25px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
 }
 
 .content {
   flex: 1;
-  padding-left: 25px;
-  padding-right: 25px;
 }
 
 div#main {
@@ -47,13 +55,10 @@ div#main {
   width: 80%;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 5px;
-  padding-bottom: 20px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding: 5px 25px 20px 25px;
   font-style: normal;
-  font-size: 16px;
   font-weight: 300;
+  font-size: 16px;
 }
 
 section {
@@ -77,13 +82,14 @@ a.ex:active {
 }
 
 p#footer {
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
   background: #203260;
-  color: white;
+  margin: 0;
+  padding: 10px 0 10px;
   text-align: center;
+  font-style: normal;
   font-weight: 300;
+  font-size: 16px;
+  color: white;
   z-index: 1000;
   position: relative;
 }
