--- a/styles.css
+++ b/styles.css
@@ -8,14 +8,14 @@ body {
 }
 
 h1#header {
-  margin: 0;
-  padding-top: 5px;
-  padding-bottom: 10px;
   background: #203260;
-  color: white;
+  margin: 0;
+  padding: 5px 0 10px;
   text-align: center;
+  font-style: normal;
   font-weight: 300;
   font-size: 30px;
+  color: white;
   z-index: 1000;
   position: relative;
 }
@@ -32,8 +32,19 @@ h1#header a:hover {
 
 main {
   flex: 1;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding: 10px 0;
+}
+
+#main-content {
+  background-color: rgb(242, 245, 250);
+  width: 85%;
+  max-width: 720px;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 5px 25px 20px 25px;
+  font-style: normal;
+  font-weight: 300;
+  font-size: 16px;
 }
 
 .content {
@@ -46,13 +57,10 @@ div#main {
   max-width: 720px;
   margin-left: auto;
   margin-right: auto;
-  padding-top: 5px;
-  padding-bottom: 20px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding: 5px 25px 20px 25px;
   font-style: normal;
-  font-size: 16px;
   font-weight: 300;
+  font-size: 16px;
 }
 
 nav button {
@@ -93,13 +101,14 @@ a.ex:active {
 }
 
 p#footer {
-  margin: 0;
-  padding-top: 10px;
-  padding-bottom: 10px;
   background: #203260;
-  color: white;
+  margin: 0;
+  padding: 10px 0 10px;
   text-align: center;
+  font-style: normal;
   font-weight: 300;
+  font-size: 16px;
+  color: white;
   z-index: 1000;
   position: relative;
 }
