--- a/13-HTML&CSS-Intro/external-styles.css
+++ b/13-HTML&CSS-Intro/external-styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inconsolata:wght@200..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cascadia+Code:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cascadia+Code:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Consolas:wght@400&display=swap');
 
 :root {
   --fs-xxsmall: xx-small;
@@ -35,6 +36,11 @@
   --fw-800: 800;
   --fw-900: 900;
   --fw-bolder: bolder;
+}
+
+code,
+pre {
+  font-family: 'Cascadia Code', 'Consolas', monospace;
 }
 
 .source-code-pro {
