--- a/styles.css
+++ b/styles.css
@@ -38,7 +38,7 @@ main {
 #main-content {
   background-color: rgb(242, 245, 250);
   width: 85%;
-  max-width: 720px;
+  max-width: 768px;
   margin-left: auto;
   margin-right: auto;
   padding: 5px 25px 20px 25px;
@@ -54,7 +54,7 @@ main {
 div#main {
   background-color: rgb(242, 245, 250);
   width: 85%;
-  max-width: 720px;
+  max-width: 768px;
   margin-left: auto;
   margin-right: auto;
   padding: 5px 25px 20px 25px;
@@ -69,7 +69,7 @@ nav button {
   border: 1px solid #203260;
   padding: 3px;
   margin-top: 13px;
-  margin-bottom: 23px;
+  margin-bottom: 20px;
   font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
   font-size: 15px;
   font-weight: 300;
@@ -98,6 +98,25 @@ a.ex:hover,
 a.ex:active {
   text-decoration: underline;
   color: darkmagenta;
+}
+
+.li-space {
+  line-height: 1.3;
+}
+
+ol.li-space {
+  margin-top: -10px;
+  margin-bottom: 30px;
+}
+
+ul.li-space {
+  list-style-type: "→ ";
+}
+
+ul.li-space li,
+ol.li-space li {
+  margin-bottom: 3px;
+  margin-left: -1.3em;
 }
 
 p#footer {
