--- a/13-HTML&CSS-Intro/styles.css
+++ b/13-HTML&CSS-Intro/styles.css
@@ -1,3 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Inconsolata:wght@200..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cascadia+Code:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Consolas:wght@400&display=swap');
+
+:root {
+  --fs-px9: 9px;
+  --fs-xxsmall: xx-small;
+  --fs-px10: 10px;
+  --fs-xsmall: x-small;
+  --fs-px11: 11px;
+  --fs-px12: 12px;
+  --fs-px13: 13px;
+  --fs-small: small;
+  --fs-px14: 14px;
+  --fs-px15: 15px;
+  --fs-px16: 16px;
+  --fs-medium: medium;
+  --fs-px18: 18px;
+  --fs-large: large;
+  --fs-px19: 19px;
+  --fs-larger: larger;
+  --fs-px24: 24px;
+  --fs-xlarge: x-large;
+  --ff-sourcecodepro: 'Source Code Pro';
+  --ff-cascadia: 'Cascadia Code';
+  --ff-firacode: 'Fira Code';
+  --ff-jetbrainsmono: 'JetBrains Mono';
+  --ff-ibmplexmono: 'IBM Plex Mono';
+  --ff-consolas: 'Consolas';
+  --ff-inconsolata: 'Inconsolata';
+  --fw: 300;
+  --fw-100: 100;
+  --fw-lighter: lighter;
+  --fw-200: 200;
+  --fw-300: 300;
+  --fw-light: light;
+  --fw-400: 400;
+  --fw-normal: normal;
+  --fw-500: 500;
+  --fw-600: 600;
+  --fw-700: 700;
+  --fw-bold: bold;
+  --fw-800: 800;
+  --fw-bolder: bolder;
+  --fw-900: 900;
+}
+
+code,
+pre {
+  font-family: 'Cascadia Code', 'Consolas', monospace;
+}
+
 html,
 body {
   height: 100%;
@@ -107,4 +159,340 @@ p#footer a {
 p#footer a:hover {
   text-decoration: underline;
   color: rgb(65, 207, 253);
+}
+
+.source-code-pro {
+  font-weight: var(--fw);
+  font-family: var(--ff-sourcecodepro);
+}
+
+.fira-code {
+  font-weight: var(--fw);
+  font-family: var(--ff-firacode);
+}
+
+.jetbrainsmono {
+  font-weight: var(--fw);
+  font-family: var(--ff-jetbrainsmono);
+}
+
+.ibm-plex-mono {
+  font-weight: var(--fw);
+  font-family: var(--ff-ibmplexmono);
+}
+
+.cascadia-code {
+  font-weight: var(--fw);
+  font-family: var(--ff-cascadia);
+}
+
+.consolas {
+  font-weight: var(--fw);
+  font-family: var(--ff-consolas);
+}
+
+.inconsolata {
+  font-weight: var(--fw);
+  font-family: var(--ff-inconsolata);
+}
+
+.px-9 {
+  font-size: var(--fs-px9);
+}
+
+.xx-small {
+  font-size: var(--fs-xxsmall);
+}
+
+.px-10 {
+  font-size: var(--fs-px10);
+}
+
+.x-small {
+  font-size: var(--fs-xsmall);
+}
+
+.px-11 {
+  font-size: var(--fs-px11);
+}
+
+.px-12 {
+  font-size: var(--fs-px12);
+}
+
+.px-13 {
+  font-size: var(--fs-px13);
+}
+
+.small {
+  font-size: var(--fs-small);
+}
+
+.px-14 {
+  font-size: var(--fs-px14);
+}
+
+.px-15 {
+  font-size: var(--fs-px15);
+}
+
+.px-16 {
+  font-size: var(--fs-px16);
+}
+
+.medium {
+  font-size: var(--fs-medium);
+}
+
+.px-18 {
+  font-size: var(--fs-px18);
+}
+
+.large {
+  font-size: var(--fs-large);
+}
+
+.px-19 {
+  font-size: var(--fs-px19);
+}
+
+.larger {
+  font-size: var(--fs-larger);
+}
+
+.x-large {
+  font-size: var(--fs-xlarge);
+}
+
+.px-24 {
+  font-size: var(--fs-px24);
+}
+
+.xx-large {
+  font-size: var(--fs-xlarge);
+}
+
+.weight-100 {
+  font-weight: var(--fw-100);
+}
+
+.weight-lighter {
+  font-weight: var(--fw-lighter);
+}
+
+.weight-200 {
+  font-weight: var(--fw-200);
+}
+
+.weight-300 {
+  font-weight: var(--fw-300);
+}
+
+.weight-light {
+  font-weight: var(--fw-light);
+}
+
+.weight-400 {
+  font-weight: var(--fw-400);
+}
+
+.weight-normal {
+  font-weight: var(--fw-normal);
+}
+
+.weight-500 {
+  font-weight: var(--fw-500);
+}
+
+.weight-600 {
+  font-weight: var(--fw-600);
+}
+
+.weight-700 {
+  font-weight: var(--fw-700);
+}
+
+.weight-bold {
+  font-weight: var(--fw-bold);
+}
+
+.weight-800 {
+  font-weight: var(--fw-800);
+}
+
+.weight-900 {
+  font-weight: var(--fw-900);
+}
+
+.italic {
+  font-style: italic;
+}
+
+.oblique {
+  font-style: oblique;
+}
+
+.left {
+  text-align: left;
+}
+
+.center {
+  text-align: center;
+}
+
+.right {
+  text-align: right;
+}
+
+.justify {
+  text-align: justify;
+}
+
+.spacing-1 {
+  line-height: 1;
+}
+
+.spacing-1-2 {
+  line-height: 1.2;
+}
+
+.spacing-1-3 {
+  line-height: 1.3;
+}
+
+.spacing-1-4 {
+  line-height: 1.4;
+}
+
+.spacing-1-5 {
+  line-height: 1.5;
+}
+
+.spacing-1-6 {
+  line-height: 1.6;
+}
+
+.background-color {
+  /* background: linear-gradient(to right, white 0%, green 50%, red 100%); */
+  background: linear-gradient(to right, white, green, red);
+}
+
+.text-color {
+  color: darkorange;
+}
+
+.border-color {
+  padding: 10px;
+  border: 5px solid;
+  border-image: linear-gradient(to right, darkorange);
+}
+
+.background-image-2 {
+  background-image: url('./cat-2.jpg');
+  background-attachment: fixed;
+  /* background-size: 100% 100%; */
+  /* background-size: cover; */
+  background-size: contain;
+  background-position: center;
+  padding: 10px;
+  color: white;
+}
+
+.background-image-3 {
+  background-image: url('./cat-3.jpg');
+  /* background-size: 100% 100%; */
+  /* background-size: cover; */
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding: 10px;
+  color: white;
+}
+
+button {
+  cursor: pointer;
+  border-radius: 50%;
+  text-align: center;
+  padding: 10px;
+  margin: 30px 0 20px;
+  background-color: rgb(65, 207, 253);
+  transition: background-color 1.5s, color 1.5s;
+  font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
+  font-weight: 400;
+  font-size: 20px;
+  color: rgb(242, 245, 250);
+}
+
+button:hover {
+  background-color: #203260;
+  font-weight: 700;
+  color: rgb(65, 207, 253);
+}
+
+a.ext:link {
+  margin-left: 12px;
+  text-decoration: underline;
+  font-weight: 700;
+  font-size: 18px;
+  color: #203260;
+}
+
+a.ext:hover {
+  background-color: rgb(65, 207, 253);
+  text-decoration: underline;
+  font-weight: 400;
+  font-size: 20px;
+  color: rgb(242, 245, 250);
+}
+
+.intro::first-line {
+  font-weight: bold;
+  color: darkorange;
+  text-transform: uppercase;
+}
+
+.highlight-class {
+  color: rgb(65, 207, 253);
+  font-style: normal;
+  font-weight: 700;
+  font-size: large;
+  /* Style for class selector */
+}
+
+#highlight-id {
+  color: rgb(102, 168, 248);
+  font-style: normal;
+  font-weight: 700;
+  font-size: larger;
+  /* Style for ID selector */
+}
+
+#paragraph-1 {
+  color: red;
+  font-weight: 700;
+  font-size: smaller;
+}
+
+#paragraph-2 {
+  color: darkred;
+  font-weight: 800;
+  font-size: medium;
+}
+
+#paragraph-3 {
+  color: darkolivegreen;
+  font-weight: 900;
+  font-size: large;
+}
+
+#paragraph-4 {
+  color: darkgreen;
+  font-weight: bold;
+  font-size: larger;
+}
+
+#paragraph-5 {
+  color: darkcyan;
+  font-weight: 700;
+  font-size: x-large;
 }
