--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
+  font-family: "Segoe UI Light", Tahoma, Verdana, sans-serif;
   margin: 0;
   padding: 0;
   display: flex;
@@ -70,7 +70,7 @@ nav button {
   margin: 13px 0 20px;
   background-color: rgb(65, 207, 253);
   transition: background-color 1s, color 1s;
-  font-family: 'Segoe UI Light', Tahoma, Verdana, sans-serif;
+  font-family: "Segoe UI Light", Tahoma, Verdana, sans-serif;
   font-size: 14px;
   font-weight: 400;
   color: white;
@@ -115,12 +115,36 @@ ol.li-space li {
 }
 
 ul.li-space {
-  list-style-type: "→ ";
+  list-style-type: "\2192\00A0";
 }
 
 ul.li-space li {
   margin-left: -1.3em;
   margin-bottom: 3px;
+}
+
+.btn-top {
+  cursor: pointer;
+  text-decoration: none;
+  border: 1px solid #203260;
+  border-radius: 50%;
+  padding: 0 10px 5px;
+  background-color: rgb(65, 207, 253);
+  transition: background-color 1s, color 1s;
+  font-size: 32px;
+  color: rgb(242, 245, 250);
+}
+
+.btn-top:hover {
+  text-decoration: none;
+  background-color: #203260;
+  color: rgb(65, 207, 253);
+}
+
+.btn-right {
+  display: block;
+  text-align: right;
+  width: 100%;
 }
 
 p#footer {
