--- a/HTM&CSS-Exam/styles/styles.css
+++ b/HTM&CSS-Exam/styles/styles.css
@@ -861,7 +861,7 @@ footer .brand-icons {
 
 footer a {
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.502);
+  color: rgb(65, 207, 253);
 }
 
 footer a:hover {
