--- a/HTM&CSS-Exam/styles/styles.css
+++ b/HTM&CSS-Exam/styles/styles.css
@@ -9,9 +9,12 @@ body {
 }
 
 header {
+  position: fixed;
+  width: 100%;
   background-color: #000000;
-  padding: 13px 0;
+  padding: 10px 0;
   color: #ffffff;
+  z-index: 2;
 }
 
 .container {
@@ -168,7 +171,7 @@ header nav ul li a {
 #hero {
   background: url('../images/image_hero.png') no-repeat center center/cover;
   background-color: #000000;
-  padding: 111px 0;
+  padding: 180px 0 115px;
   position: relative;
 }
 
