--- a/HTM&CSS-Exam/styles/styles.css
+++ b/HTM&CSS-Exam/styles/styles.css
@@ -879,9 +879,9 @@ footer a:visited {
 
 /* Responsive Styles */
 @media (max-width: 720px) {
-  .container {
+  /* .container {
     width: 95%;
-  }
+  } */
 
   header {
     flex-direction: column;
