--- a/HTM&CSS-Exam/styles/styles.css
+++ b/HTM&CSS-Exam/styles/styles.css
@@ -47,16 +47,6 @@ header {
   gap: 10px;
 }
 
-.container-contact {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 95%;
-  max-width: 1280px;
-  margin: 0 auto;
-  gap: 70px;
-}
-
 nav {
   display: flex;
   flex-wrap: wrap;
@@ -666,23 +656,72 @@ header nav ul li a {
 }
 
 #contact {
-  font-family: "Open Sans";
-  font-size: 14px;
-  padding: 100px 0 80px;
+  padding: 100px 0 70px;
+}
+
+#contact .contact-content {
+  max-width: 100%;
 }
 
 #contact .contact-content h2 {
   font-family: "Raleway";
+  text-align: center;
   line-height: 43px;
   font-size: 36px;
   color: rgba(33, 33, 33);
-  text-align: center;
 }
 
 #contact .contact-content p {
   font-family: "Open Sans";
+  text-align: center;
   font-size: 14px;
   color: #86878b;
+  margin: 0 0 70px;
+}
+
+#contact .form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-content: space-between;
+  align-items: center;
+  gap: 45px;
+}
+
+#contact .form-content {
+  width: 100%;
+  display: flex;
+}
+
+#contact .left {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin-right: 33px;
+  width: 50%;
+}
+
+#contact .form input {
+  height: 30px;
+  font-size: 14px;
+  border: none;
+  border-bottom: 1px solid silver;
+}
+
+#contact .form input::placeholder {
+  color: silver;
+}
+
+#contact .form textarea {
+  border: none;
+  border-bottom: 1px solid silver;
+  resize: none;
+  margin-left: 33px;
+  width: 50%;
+}
+
+#contact .form textarea::placeholder {
+  color: silver;
 }
 
 #contact .btn-send {
@@ -701,56 +740,8 @@ header nav ul li a {
   border: 2px solid black;
 }
 
-#contact .form {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 100%;
-  gap: 40px;
-}
-
-#contact .form-content {
-  display: flex;
-  align-self: stretch;
-  gap: 70px;
-}
-
-#contact .form-content>* {
-  flex: 1 1 100%;
-}
-
-#contact .form-content .left {
-  display: flex;
-  flex-direction: column;
-  gap: 30px;
-}
-
-#contact .form input {
-  height: 30px;
-  font-size: 14px;
-  border: none;
-  border-bottom: 1px solid silver;
-}
-
-#contact .form input::placeholder {
-  color: silver;
-}
-
-#contact .form textarea {
-  width: 100%;
-  height: 100%;
-  border: none;
-  border-bottom: 1px solid silver;
-  resize: none;
-}
-
-#contact .form textarea::placeholder {
-  color: silver;
-}
-
 hr.devider-whit {
   border-top: 1px solid whitesmoke;
-
   width: 65px;
   margin-left: 0;
 }
